--- a/Desafios/desafio-cordel/estilo/style.css
+++ b/Desafios/desafio-cordel/estilo/style.css
@@ -1,9 +1,18 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Handlee&display=swap');
+:root {
+    --font0: Verdana, Geneva, Tahoma, sans-serif; /*Padrão*/
+    --font01: 'Secular One', sans-serif; /*Titulos*/
+    --font02: 'Handlee', cursive; /*Cordel*/
+}
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 html, body {
+    font-family: var(--font0);
     min-height: 100vh;
     background-color: aliceblue;
 }
@@ -15,15 +24,19 @@ header {
 header h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font01);
+    font-size: 4em;
 }
 header p {
     padding-bottom: 50px;
 }
 section {
+    font-family: var(--font02);
     padding-left: 40px;
     padding-top: 10%;
     padding-bottom: 10%;
-    line-height: 2em;
+    line-height: 4vw;
+    font-weight: bold;
 }
 section.normal {
     background-color: white;
@@ -34,7 +47,8 @@ section.imagem {
     color: white;
 }
 .imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 15px;
     background-color: rgba(0, 0, 0, 0.253);
 }
 a {
