--- a/Desafios/desafio-cordel/estilo/style.css
+++ b/Desafios/desafio-cordel/estilo/style.css
@@ -35,7 +35,7 @@ section {
     padding-left: 40px;
     padding-top: 10%;
     padding-bottom: 10%;
-    line-height: 4vw;
+    line-height: 4.9vw;
     font-weight: bold;
 }
 section.normal {
@@ -45,11 +45,27 @@ section.normal {
 section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
+    text-shadow: 1px 1px 0px black;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.411);
+    background-size: cover;
+    background-attachment: fixed;
+}
+section > p {
+    padding-bottom: 2.5em;
+    font-size: 1.5em;
+}
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
 }
 .imagem > p {
     display: inline-block;
     padding: 15px;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 a {
     color: white;
